# Entire_Multi_operator_code

./: LICENSE  README.md  pyproject.toml  requirements.txt
