[tool.poetry]
name = "optimal-timing-for-bandwidth-reservation"
version = "0.1.0"
description = ""
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"
packages = [{include = "optimal_timing_for_bandwidth_reservation"}]

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"

pandas = "^1.5.3"
numpy = "^1.24.2"
torch = "^2.0.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
Sphinx = { version = "5.3.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
tensorboard = "^2.14.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
sphinx-autodoc-typehints = "^1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
